[gd_scene load_steps=10 format=3 uid="uid://ng0fpve2rprw"]

[ext_resource type="Texture2D" uid="uid://clu5ma2xjxd5t" path="res://assets/vn/Settings/History-Pop Up Background.png" id="1_fmab6"]
[ext_resource type="Script" path="res://tools/dialogue/log.gd" id="1_rp8jn"]
[ext_resource type="Texture2D" uid="uid://dn7cdu0wh1hya" path="res://assets/vn/Settings/Vertical Scroll Bar.png" id="2_t1hba"]
[ext_resource type="Texture2D" uid="uid://bgsmuiltt2yms" path="res://assets/vn/Settings/Scrolly Button Circle Slider.png" id="3_a4b6j"]
[ext_resource type="Texture2D" uid="uid://bbpx7huvpjk82" path="res://assets/vn/Settings/Back (2).png" id="5_1kljf"]
[ext_resource type="Texture2D" uid="uid://cgt25px5ytk02" path="res://assets/vn/Settings/Back_Click.png" id="6_u5e83"]
[ext_resource type="Texture2D" uid="uid://c3ynoic0if62" path="res://assets/vn/Settings/Back_Hover.png" id="7_dyce8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ix7s7"]
texture = ExtResource("2_t1hba")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5jfla"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
texture = ExtResource("3_a4b6j")

[node name="Log" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1088.0
script = ExtResource("1_rp8jn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
color = Color(0, 0, 0, 0.360784)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.901961)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -384.0
offset_right = 596.0
offset_bottom = 419.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fmab6")

[node name="VScrollBar" type="VScrollBar" parent="."]
process_mode = 3
z_index = 9
z_as_relative = false
layout_mode = 2
offset_left = 1440.0
offset_top = 270.0
offset_right = 1454.0
offset_bottom = 570.0
scale = Vector2(2, 2)
theme_override_styles/scroll = SubResource("StyleBoxTexture_ix7s7")
theme_override_styles/scroll_focus = SubResource("StyleBoxTexture_ix7s7")
theme_override_styles/grabber = SubResource("StyleBoxTexture_5jfla")
theme_override_styles/grabber_highlight = SubResource("StyleBoxTexture_5jfla")
theme_override_styles/grabber_pressed = SubResource("StyleBoxTexture_5jfla")
max_value = 1.0
value = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 270.0
offset_right = 1410.0
offset_bottom = 870.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 143.0
offset_right = 1140.0
offset_bottom = 263.0
theme_override_colors/font_color = Color(0.32549, 0.262745, 0.101961, 1)
theme_override_font_sizes/font_size = 32
text = "Log"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1590.0
offset_top = 900.0
offset_right = 1638.0
offset_bottom = 948.0
texture_normal = ExtResource("5_1kljf")
texture_pressed = ExtResource("6_u5e83")
texture_hover = ExtResource("7_dyce8")
texture_focused = ExtResource("7_dyce8")

[connection signal="mouse_entered" from="VScrollBar" to="." method="_on_v_scroll_bar_mouse_entered"]
[connection signal="value_changed" from="VScrollBar" to="." method="_on_v_scroll_bar_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
